--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -395,7 +395,7 @@ We implemented JIT compilation using Catalyst with GPU acceleration:
 \item \textbf{Hardware}: Single NVIDIA GPU
 \end{itemize}
 
-The modest speedup indicates GPU overhead dominates for this problem size. JIT compilation provides some benefit, but data transfer to/from GPU and kernel launch overhead limit gains for small quantum circuits.
+The modest speedup shows that GPU overhead is too large for this problem size. JIT compilation (pre-compiling code to run faster) provides some benefit, but the time spent transferring data to and from the GPU and starting GPU calculations limits the performance gains for small quantum circuits.
 
 \subsubsection{Implementation 3: MPI Parallelization}
 
@@ -422,11 +422,11 @@ MPI parallelization achieved dramatic speedups by distributing bond length calcu
 \textbf{Key Observations:}
 
 \begin{enumerate}
-\item \textbf{Super-linear Initial Speedup}: The 2-process MPI implementation achieves 70.29× speedup, far exceeding the 2× ideal. This is because the MPI implementation uses JIT compilation with Optax optimizer (much faster per iteration) while serial uses PennyLane's AdamOptimizer (much slower).
+\item \textbf{Super-linear Initial Speedup}: The 2-process MPI implementation achieves 70.29× speedup, far exceeding the ideal 2× we would expect from just using 2 processors. This is because the MPI implementation uses JIT compilation (pre-compiled code) with the Optax optimizer (much faster per step) while the serial version uses PennyLane's AdamOptimizer (much slower per step).
 
 \item \textbf{Near-Linear Scaling}: From 2 to 8 processes, speedup increases from 70.29× to 108.39×, showing excellent strong scaling behavior.
 
-\item \textbf{Saturation Beyond 16 Processes}: Speedup plateaus around 117× for 16+ processes, indicating we've reached the problem's parallel limit.
+\item \textbf{Saturation Beyond 16 Processes}: Speedup levels off around 117× for 16 or more processes, showing that we've reached the limit of how much this problem can be parallelized.
 
 \item \textbf{Algorithm Differences}: The dramatic speedup primarily comes from combining JIT compilation with parallelization, not parallelization alone.
 \end{enumerate}
@@ -462,21 +462,21 @@ The computed potential energy surface captures the essential quantum chemistry o
 
 \textbf{GPU Performance:} The GPU/JIT implementation achieved only 3.46× speedup (171.79s vs 593.95s). This modest improvement is due to:
 \begin{itemize}
-\item GPU memory transfer overhead for small quantum circuits (4 qubits)
-\item Kernel launch latency dominating actual computation time
-\item Insufficient parallelism within single circuits to saturate GPU cores
-\item Small problem size not benefiting from GPU's massive parallelism
+\item Time spent copying data to and from GPU memory for small quantum circuits (4 qubits)
+\item GPU startup costs taking longer than the actual calculations
+\item Not enough work within a single circuit to keep all GPU cores busy
+\item Small problem size unable to take advantage of the GPU's ability to do many calculations at once
 \end{itemize}
 
-\textbf{MPI Scaling Excellence:} The MPI implementation demonstrates exceptional scaling:
+\textbf{MPI Scaling Excellence:} The MPI implementation shows outstanding performance improvement:
 \begin{itemize}
-\item \textbf{Combined algorithmic and parallel gains}: The 70× speedup at 2 processes reflects both JIT compilation benefits and parallelization
-\item \textbf{Strong scaling}: Near-linear scaling from 2 to 8 processes (70× to 108×)
-\item \textbf{Cache effects}: Super-linear local speedup likely due to improved cache utilization per core when workload is divided
-\item \textbf{Saturation}: Plateau at 117× indicates reaching fundamental parallel limit around 16 processes
+\item \textbf{Combined algorithm and parallel gains}: The 70× speedup with 2 processes comes from both using faster pre-compiled code and splitting the work across processors
+\item \textbf{Strong scaling}: Nearly proportional speedup improvement from 2 to 8 processes (70× to 108×)
+\item \textbf{Cache effects}: Better-than-expected speedup likely because each processor core has more fast memory (cache) available when the work is divided up
+\item \textbf{Saturation}: Speedup levels off at 117× around 16 processes, showing we've reached the practical limit for this problem
 \end{itemize}
 
-\textbf{Efficiency Analysis:} The "efficiency" values exceeding 100\% (e.g., 3514\% for 2 processes) are artifacts of comparing optimized MPI code (with JIT+Optax) against unoptimized serial code (PennyLane Adam). A fairer comparison would use the same optimizer for both, but the practical speedup achieved (117×) is what matters for real applications.
+\textbf{Efficiency Analysis:} The "efficiency" values exceeding 100\% (e.g., 3514\% for 2 processes) happen because we're comparing optimized MPI code (with JIT+Optax) against unoptimized serial code (PennyLane Adam). A fairer comparison would use the same optimization techniques for both, but the practical speedup we achieved (117×) is what really matters for getting work done faster.
 
 \subsection{Relevance to Original Questions}
 
@@ -495,9 +495,9 @@ The parallel implementations demonstrate that VQE is highly amenable to HPC opti
 
 However, our results also reveal important lessons:
 \begin{itemize}
-\item \textbf{Algorithm choice matters}: The optimizer and compilation strategy have enormous impact (70× from switching to JIT+Optax)
+\item \textbf{Algorithm choice matters}: The choice of optimizer and whether code is pre-compiled has huge impact (70× improvement just from switching to JIT+Optax)
 \item \textbf{GPU overhead}: Small quantum circuits don't benefit from GPU acceleration
-\item \textbf{Practical limits}: Speedup plateaus beyond 16 processes for this problem size
+\item \textbf{Practical limits}: Speedup levels off beyond 16 processes for this problem size
 \end{itemize}
 
 The combination of JIT compilation and MPI parallelization proved most effective, reducing runtime from 593.95s to 5.04s---a practical speedup that makes parameter sweeps and optimization studies feasible.
@@ -543,34 +543,34 @@ This project successfully implemented and benchmarked the Variational Quantum Ei
 This work demonstrates how classical HPC techniques can dramatically accelerate hybrid quantum-classical algorithms. While we focused on the hydrogen molecule, the parallelization strategies and lessons learned apply broadly to:
 
 \begin{itemize}
-\item \textbf{Larger molecules}: Multi-atom systems with numerous geometric configurations
-\item \textbf{Multi-dimensional parameter sweeps}: Exploring reaction coordinates, conformational spaces
+\item \textbf{Larger molecules}: Systems with many atoms and different possible shapes
+\item \textbf{Multi-dimensional parameter sweeps}: Exploring how molecules change shape during reactions
 \item \textbf{Ansatz optimization}: Testing different quantum circuit designs in parallel
-\item \textbf{Ensemble calculations}: Thermal averaging, excited states, statistical sampling
-\item \textbf{Other variational algorithms}: QAOA for optimization, VQE for materials science
+\item \textbf{Ensemble calculations}: Computing averages over many molecular states
+\item \textbf{Other variational algorithms}: Similar quantum algorithms like QAOA for optimization problems
 \end{itemize}
 
 \textbf{Key Lessons for Quantum Algorithm Acceleration:}
 
 \begin{enumerate}
-\item \textbf{Match hardware to problem size}: Small circuits favor CPU parallelization; GPU overhead isn't justified until circuits have 10+ qubits with deep gate sequences.
+\item \textbf{Match hardware to problem size}: Small circuits work better on CPUs with parallel processing; GPUs aren't worth using until circuits have 10+ qubits with many operations.
 
-\item \textbf{Algorithmic improvements first}: JIT compilation and optimizer choice had more impact than raw parallelization---always optimize serially before parallelizing.
+\item \textbf{Algorithmic improvements first}: Pre-compiling code and choosing a good optimizer had more impact than just adding more processors---always optimize your serial code before trying to parallelize it.
 
-\item \textbf{Embarrassingly parallel is ideal}: VQE's structure (independent parameter evaluations) achieves near-perfect scaling without complex communication patterns.
+\item \textbf{Embarrassingly parallel is ideal}: VQE's structure (where each calculation is independent) achieves nearly perfect speedup without needing complicated communication between processors.
 
-\item \textbf{Know your saturation point}: For 100 independent tasks, 16-32 processes is optimal; more processes add overhead without benefit.
+\item \textbf{Know your saturation point}: For 100 independent calculations, 16-32 processors is optimal; using more processors adds coordination overhead without making things faster.
 \end{enumerate}
 
-As near-term quantum devices scale to 100+ qubits and classical simulation becomes intractable, these HPC techniques will remain essential for:
+As quantum computers improve to 100+ qubits and classical simulation becomes impossible, these HPC techniques will remain important for:
 \begin{itemize}
-\item Benchmarking and validating quantum hardware results
-\item Hybrid algorithms splitting work between classical and quantum processors
-\item Error mitigation strategies requiring many circuit executions
-\item Variational algorithm training and hyperparameter optimization
+\item Checking that quantum hardware gives correct answers
+\item Hybrid algorithms that split work between classical and quantum computers
+\item Error correction methods that require running circuits many times
+\item Training and tuning variational quantum algorithms
 \end{itemize}
 
-The 117× speedup achieved here demonstrates that practical quantum chemistry calculations are feasible today using classical HPC, while also preparing us for the hybrid quantum-classical computing paradigm of tomorrow.
+The 117× speedup we achieved shows that practical quantum chemistry calculations can be done today using classical HPC, while also preparing us for future hybrid quantum-classical computing.
 
 \section{Acknowledgements}
 
