little changes, qjit and mpi file forces jax to use cpu backend

--- a/deliverables/project_report.tex
+++ b/deliverables/project_report.tex
@@ -550,7 +550,7 @@ This project successfully implemented and benchmarked the Variational Quantum Ei
           \begin{itemize}
               \item Use JIT compilation for all implementations
               \item MPI works excellently for embarrassingly parallel parameter sweeps
-              \item Match process count to problem size (100 bond lengths ÷ 16 processes ≈ 6 per process)
+              \item Match process count to problem size (100 bond lengths ÷ 16 processes $\approx$ 6 per process)
               \item GPU infrastructure configured for future testing on larger circuits
           \end{itemize}
 \end{enumerate}
